# pilya

./: .gitignore  README.md  example.pilya  pilya.cabal
cli/: Main.hs
examples/: fib.pilya
gui/: Main.hs
src/: Main.hs
src/Pilya/: Compile.hs  Exec.hs  Lex.hs  Parcomb.hs  Syn.hs  Table.hs  Traverse.hs
