name:                pilya
version:             0.1.0.0
homepage:            https://github.com/yamnikov-oleg/pilya#readme
license:             BSD3
license-file:        LICENSE
author:              Oleg Yamnikov
maintainer:          bgeyts667@gmail.com
copyright:           2017 Oleg Yamnikov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Pilya.Lex
                     , Pilya.Parcomb
                     , Pilya.Syn
                     , Pilya.Table
                     , Pilya.Traverse
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , split
  default-language:    Haskell2010

executable pilya-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pilya
                     , text

executable pilya-gui
  hs-source-dirs:      gui
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pilya
                     , text
                     , gi-gtk
                     , haskell-gi-base
